--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CRaleway%7CRoboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CRaleway%7CRoboto&display=swap" rel="stylesheet">
 
     <!-- Bootstrap css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -35,6 +35,7 @@
     <style>
         @font-face {
             font-family: 'Glyphicons Halflings';
+            font-display: swap;
             src: url('/fonts/glyphicons-halflings-regular.eot');
         }
     </style>
@@ -65,7 +66,7 @@
       	            <span class="icon-bar"></span>
       	            <span class="icon-bar"></span> 
       	          </button>
-      	          <a class="navbar-brand" href="#"><img src="assets/img/logo.webp" alt="logo"></a>
+      	          <a class="navbar-brand" href="#"><img src="assets/img/logo.webp" height="51px" width="223px" alt="logo"></a>
       	        </div>
 
       	        <div class="collapse navbar-collapse" id="myNavbar">
@@ -92,7 +93,7 @@
 
       <div class="item active">
         <div class="overlay"></div>
-        <img src="assets/img/slider-1.webp" loading="lazy" alt="Voiceover Artist" >
+        <img src="assets/img/slider-1.webp" height="590px" loading="lazy" alt="Voiceover Artist" >
         <div class="carousel-caption">
           <h4 class="hidden-xs">Je suis <span>Marc Wieser</span> et je suis</h4><br> 
           <h3 class="hidden-xs">Comédien voix-off</h3>
