--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
       <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
         <p>
-          <a class="btn btn-service full" target="_blank" href="mailto:voix@marc-wieser.fr">marc.wieser33@gmail.com</a>
+          <a class="btn btn-service full" target="_blank" href="mailto:marc.wieser33@gmail.com">marc.wieser33@gmail.com</a>
         </p>
       </div>
     </div>
