--- a/404.html
+++ b/404.html
@@ -47,35 +47,26 @@
 
         <!-- begin content -->
         <main class="content" aria-label="Content">
-            <!-- begin hero -->
-<section class="hero">
-    <div class="container">
-        <div class="row">
-            <div class="col col-6 col-d-12 above-limit">
-                <div class="hero__left">
-                    <div class="hero__avatar hide-above-limit"><img class="lazy loaded" alt="Marc Wieser" data-ll-status="loaded" src="/assets/imgs/pic-small.jpg" /></div>
-                    <h1 class="hero__title">Bonjour à tous, je suis Marc Wieser</h1>
-                    <p class="hero__description">Je suis comédien et prêt à enregistrer pour vous que ce soit depuis votre studio, ou le miens. Je dispose d'une cabine StudioBricks dédié pour l'enregistrement de voix et d'un micro Rode NT1-A.</p>
-                    <div class="hero__subscribe">
-                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1382758003&amp;color=%234d41e0&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
-<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/marc-wieser-voix" title="Marc Wieser" target="_blank" style="color: #cccccc; text-decoration: none;">Marc Wieser</a> · <a href="https://soundcloud.com/marc-wieser-voix/bande-demo-2022" title="Bande Démo - Marc Wieser" target="_blank" style="color: #cccccc; text-decoration: none;">Bande Démo - Marc Wieser</a>
+            <style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
 </div>
-                    </div>
-                    <div class="hero__subscribe">
-                        <a href="mailto:marc.wieser33@gmail.com" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="contact">Contactez moi</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-5 col-d-12 limit">
-                <div class="hero__right">
-                    <div class="hero__image"><img class="lazy loaded" alt="Image de Marc Wieser" data-ll-status="loaded" src="/assets/imgs/pic-large.jpg" /></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end hero -->
 
         </main>
         <!-- end content -->
