--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
                     <h1 class="hero__title">Bonjour à tous, je suis Marc Wieser</h1>
                     <p class="hero__description">Je suis comédien et prêt à enregistrer pour vous que ce soit depuis votre studio, ou le miens. Je dispose d'une cabine StudioBricks dédié pour l'enregistrement de voix et d'un micro Rode NT1-A.</p>
                     <div class="hero__subscribe">
-                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1382758003&amp;color=%234d41e0&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+                    <iframe class="desktop" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1382758003&amp;color=%234d41e0&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+<iframe class="mobile" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1382758003&amp;color=%234d41e0&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
     <a href="https://soundcloud.com/marc-wieser-voix" title="Marc Wieser" target="_blank" style="color: #cccccc; text-decoration: none;">Marc Wieser</a> · <a href="https://soundcloud.com/marc-wieser-voix/bande-demo-2022" title="Bande Démo - Marc Wieser" target="_blank" style="color: #cccccc; text-decoration: none;">Bande Démo - Marc Wieser</a>
 </div>
+
                     </div>
-                    <div class="hero__subscribe">
+                    <div class="hero__subscribe withbtn">
                         <a href="mailto:marc.wieser33@gmail.com" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="contact">Contactez moi</a>
+                        <a href="/assets/sound/Bande démo.wav" download="" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="contact">Télécharger ma bande démo</a>
                     </div>
                 </div>
             </div>
