Adding favicon and optimizing lighthouse score and fixing safari issues

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Marc Wieser</title>
         <meta name="description" content="Bonjour à tous, je suis Marc Wieser Je suis comédien et prêt à enregistrer pour vous que ce soit depuis votre studio, ou le miens. Je dispose d'une cabine StudioBricks dédié pour l'enregistrement de voix et d'un micro Rode NT1-A.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
@@ -15,6 +17,10 @@
         <meta property="og:description" content="Bonjour à tous, je suis Marc Wieser Je suis comédien et prêt à enregistrer pour vous que ce soit depuis votre studio, ou le miens. Je dispose d'une cabine StudioBricks dédié pour l'enregistrement de voix et d'un micro Rode NT1-A.">
         <meta property="og:image" content="https://www.marc-wieser.fr/assets/imgs/pic-large.jpg">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;800&amp;display=swap" as="style">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;800&amp;display=swap" rel="stylesheet">
@@ -65,8 +71,8 @@
 
                     </div>
                     <div class="hero__subscribe withbtn">
-                        <a href="mailto:marc.wieser33@gmail.com" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="contact">Contactez moi</a>
-                        <a href="/assets/sound/Bande démo.wav" download="" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="contact">Télécharger ma bande démo</a>
+                        <a href="mailto:marc.wieser33@gmail.com" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" name="contact">Contactez moi</a>
+                        <a href="/assets/sound/Bande démo.wav" download="" target="_blank" class="button button--primary subscribe-button" id="membedded-subscribe" name="contact">Télécharger ma bande démo</a>
                     </div>
                 </div>
             </div>
